--- a/src/app/header/style.less
+++ b/src/app/header/style.less
@@ -15,6 +15,7 @@
         }
         
         .to-admin-control{
+            cursor: pointer;
             border-right: 1px solid #2273cc;
             border-left: 1px solid #1b599b;
             font-size: 15px;
