--- a/src/app/header/template.html
+++ b/src/app/header/template.html
@@ -11,7 +11,7 @@
       		</ul>
 			<img class="userpic" ng-src="{{user.avatar}}" alt="" />
 		</div>
-		<div class="to-admin-control pull-right">
+		<div class="to-admin-control pull-right" ng-click = "toadmin()">
 			管理控制台
 		</div>
 		<div class="notif_box" class="message-notice pull-right">
