--- a/src/app/files/template.html
+++ b/src/app/files/template.html
@@ -84,9 +84,9 @@
 					<td class="file-sise-td"><span ng-show = "obj.folder">{{obj.file_count}}</span><span ng-hide = "obj.folder">{{obj.format_size}}</span></td>
 					<td class="permission-td"> {{obj.permission}} </td>
 					<td class="action-td">
-						<div class = "link-share-ico"></div>
+						<div class = "link-share-ico" ng-click = "linkShare(obj)"></div>
 						<div class = "share-ico" ng-show = "obj.folder" ng-click = "inviteTeamUsers(obj)"></div>
-						<div class = "discuss-ico" ng-hide = "obj.folder"></div>
+						<div class = "discuss-ico" ng-hide = "obj.folder" ></div>
 					</td>
 				</tr>
 				<div class="dropdown position-fixed" id="myMenu">
@@ -163,19 +163,25 @@
 		</div>
 		<div class="groups col-sm-12" ng-repeat="group in groups" >
 			<div class="group-div">
-				<div class="img">
-					<span class="arrows-img" ng-click = "changeGroupshow(group)"></span>
+				<div class="img" ng-click = "changeGroupshow(group)">
+					<span class="arrows-img"></span>
 					<img  width="24px" height="24px" src="./images/grouplist_icon.png"/>
 				</div>
 				<div class="group-name">
 					<span>{{group.group_name}}</span>
 					<span class="group-user-count">({{group.user_count}})</span>
 				</div>
-				<div class="group-permission" data-toggle="dropdown" id="permissiondropdownMenu">
-					<span class="">{{group.permission}}</span>
-					<span class="caret"></span>
+				<div class="group-permission" dropdown>
+					<span class="dropdown-toggle">{{group.permission_value}}<span class="caret"></span></span>
+					<ul class="dropdown-menu" role="menu">
+						<li role="presentation" ng-repeat="value in permission_value" ng-click = "toggleDropdown(user)">
+							<a role="menuitem" tabindex="-1">
+								{{value}}
+							</a>
+						</li>
+					</ul>
 				</div>
-				<div class="deleteGroup">
+				<div class="delete-group">
 					<span class="">X</span>
 				</div>
 			</div>
@@ -187,23 +193,24 @@
 			</div>
 		</div>
 		<div class="users col-sm-12" ng-repeat="user in users">
-			<div class="col-sm-2">
+			<div class="img">
 				<img  width="24px" height="24px" ng-src="{{user.avatar}}"/>
 			</div>
-			<div class="user-name col-sm-3">
+			<div class="user-name">
 				<span class="user-name">{{user.real_name}}</span>
 			</div>
-			<div class="col-sm-6" dropdown is-open="user.isopen">
-				<span class="group-permission dropdown-toggle">{{user.permission}}</span>
-				<span class="caret"></span>
-				<span class="">X</span>
+			<div class="user-permission" dropdown is-open="user.isopen">
+				<span class="group-permission dropdown-toggle">{{user.permission_value}}<span class="caret"></span></span>
 				<ul class="dropdown-menu" role="menu">
-					<li role="presentation" ng-repeat="value in permission_value" ng-click = "toggleDropdown(user)">
+					<li role="presentation" ng-repeat="value in permission_value" ng-click = "changePermission(user, value)">
 						<a role="menuitem" tabindex="-1">
 							{{value}}
 						</a>
 					</li>
 				</ul>
+			</div>
+			<div class="delete-user">
+				<span class="">X</span>
 			</div>
 		</div>
 	</div>
