--- a/src/app/files/move-file.html
+++ b/src/app/files/move-file.html
@@ -2,21 +2,20 @@
 	<h3 class="modal-title">移动文件夹</h3>
 </div>
 <div class="modal-body">
-	<div>选中:{{abc.currentNode.id}}</div>
 	<div
     data-angular-treeview="true"
     data-tree-id="{{treeId}}"
     data-tree-model="treedata"
     data-node-id="id"
-    data-node-label="label"
-    data-node-children="children" >
+    data-node-label="text"
+    data-node-children="_child" >
 </div>
 </div>
 <div class="modal-footer">
 	<button class="btn btn-primary" ng-click="ok()">
-		OK
+		移动
 	</button>
-	<button class="btn btn-warning" ng-click="cancel()">
-		Cancel
+	<button class="btn btn-default" ng-click="cancel()">
+		取消
 	</button>
 </div>
