--- a/src/app/files/link-share.html
+++ b/src/app/files/link-share.html
@@ -1,5 +1,5 @@
 <div class="modal-header">
-	<h3 class="modal-title">链接分享</h3>
+	<h3 class="modal-title">"{{obj.file_name}}"链接分享</h3>
 </div>
 <div class="modal-body">
 	<form role="form" class="form-horizontal link-share-content" ng-show = "linkCreateOrSend">
@@ -13,12 +13,12 @@
 		</p>
 		<div class="checkbox">
 			<label class="pull-left">
-				<input type="checkbox" ng-model="linkSharePasswordShow">
+				<input type="checkbox" ng-model="linkSharePasswordShow" ng-click = "changeLinkSharePasswordShow()">
 				设置访问密码 </label>
 		</div>
 		<div class="form-group input-password">
 			<div class="col-sm-11 col-sm-offset-1">
-				<input type="{{linkSharePasswordType}}" class="form-control" placeholder="输入访问密码" ng-model="inviteInputValue" ng-disabled="!linkSharePasswordShow">
+				<input type="{{linkSharePasswordType}}" class="form-control" placeholder="输入访问密码" ng-model="linkSharePassword0" ng-disabled="!linkSharePasswordShow">
 			</div>
 			<div class="col-sm-11 col-sm-offset-1">
 				<div class="checkbox">
@@ -31,7 +31,7 @@
 		<h5>链接权限</h5>
 		<div class="form-group">
 			<div class="col-sm-12">
-				<div class="dropdown" is-open="permissionOpen">
+				<div class="dropdown" is-open="permissionOpen" is-open="permissionOpen">
 					<button class="btn btn-default dropdown-toggle form-control" type="button" data-toggle="dropdown">
 						{{linkSharePermissionValue}}
 						<span class="caret"></span>
