--- a/src/app/files/invite-team-users.html
+++ b/src/app/files/invite-team-users.html
@@ -1,5 +1,8 @@
 <div class="invite-team-users-inner" ng-class="{broad:broad}">
 	<div class="modal-header">
+		<button class="bootbox-close-button close" type="button" ng-click="cancel()">
+			×
+		</button>
 		<h3 class="modal-title">邀请协作人</h3>
 	</div>
 	<div class="modal-body invite-form">
