--- a/src/app/files/link-share.html
+++ b/src/app/files/link-share.html
@@ -1,4 +1,7 @@
 <div class="modal-header">
+	<button class="bootbox-close-button close" type="button" ng-click="cancel()">
+		×
+	</button>
 	<h3 class="modal-title">"{{obj.file_name}}"链接分享</h3>
 </div>
 <div class="modal-body">
