--- a/src/app/files/move-file.html
+++ b/src/app/files/move-file.html
@@ -1,4 +1,7 @@
 <div class="modal-header">
+	<button class="bootbox-close-button close" type="button" ng-click="cancel()">
+		×
+	</button>
 	<h3 class="modal-title">移动文件夹</h3>
 </div>
 <div class="modal-body">
