--- a/src/admin/header/style.less
+++ b/src/admin/header/style.less
@@ -9,6 +9,7 @@
             margin-top: 5px;
             cursor: pointer;
             font-size: 12px;
+            line-height: 1.6;
             .back-img{
                 background: url("../../images/back.png") no-repeat scroll 0 0 rgba(0, 0, 0, 0);
                 float: left;
