--- a/src/app/files/preview-file.html
+++ b/src/app/files/preview-file.html
@@ -1,19 +1,19 @@
 <div class="modal-body">
-	<div class="preview-view col-sm-9">
+	<div class="preview-view col-sm-10">
 		<div class="modal-header">
 			<h3 class="modal-title">文件预览</h3>
 		</div>
 		<div class="image-preview" ng-show = "fileType == 'image'">
-			图片
+			<img src="{{previewValue}}" />
 		</div>
 		<div class="txt-preview" ng-show = "fileType == 'txt'" ng-bind-html = "previewValue">
 
 		</div>
-		<div class="office-preview" ng-show = "fileType == 'office'">
+		<div class="office-preview" ng-show = "fileType == 'office'" ng-bind-html = "previewValue">
 
 		</div>
 	</div>
-	<div class="col-sm-3 discuss-version-view">
+	<div class="col-sm-2 discuss-version-view">
 		<ul class="nav nav-sidebar">
 			<li class="disc" ng-class="{ active: navType == 'dis'}" ng-click = "changeNavType('dis')">
 				讨论
