--- a/src/app/files/style.less
+++ b/src/app/files/style.less
@@ -479,6 +479,13 @@
     }
     .preview-view{
         height: 100%;
+        .office-preview{
+            bottom: 0;
+            left: 13px;
+            position: absolute;
+            right: 14px;
+            top: 40px;
+        }
     }
     .modal-body{
         position: relative;
