--- a/src/app/files/style.less
+++ b/src/app/files/style.less
@@ -477,6 +477,10 @@
     .modal-content{
         height: 100%;
     }
+    .upload-new-version{
+        float: right;
+        padding: 4px 6px;
+    }
     .preview-view{
         height: 100%;
         .office-preview{
