--- a/src/app/header/template.html
+++ b/src/app/header/template.html
@@ -6,8 +6,8 @@
 				<div class="personalInfor"></div>
 			</div>
 			<ul class="dropdown-menu" role="menu">
-        		<li><a href="#">个人信息</a></li>
-        		<li><a href="#">退出</a></li>
+        		<li><a>个人信息</a></li>
+        		<li ng-click = "toLogin()"><a>退出</a></li>
       		</ul>
 			<img class="userpic" ng-src="{{user.avatar}}" alt="" />
 		</div>
