--- a/src/app/files/link-share.html
+++ b/src/app/files/link-share.html
@@ -85,7 +85,12 @@
 		<h5>邮件分享</h5>
 		<div class="form-group">
 			<div class="col-sm-12">
-				<input type="text" class="form-control" ng-model="inviteInputValue">
+				<input
+				  type="hidden"
+				  ui-select2="emailSelectOptions"
+				  ng-model="selectedEmails"
+				  style="width:100%;"
+				  />
 			</div>
 		</div>
 		<div class="form-group">
