--- a/src/app/header/style.less
+++ b/src/app/header/style.less
@@ -4,6 +4,11 @@
 //      background-color: @header-ext-background-color;
         color: white;
         height: 30px;
+        .dropdown-menu{
+            li{
+                cursor: pointer;
+            }
+        }
         .user-info{
             border-left: 1px solid #1b599b;
             padding-left: 10px;
