--- a/src/app/files/style.less
+++ b/src/app/files/style.less
@@ -36,6 +36,9 @@
        a:hover, a:focus{
            text-decoration: none;
            cursor: pointer;
+           &.noPreview{
+               cursor: auto;
+           }
        } 
     }
     
@@ -483,7 +486,29 @@
     }
     .preview-view{
         height: 100%;
+        .image-preview{
+            text-align: center;
+            bottom: 0;
+            left: 13px;
+            position: absolute;
+            right: 14px;
+            top: 40px;
+            img{
+                height: 100%;
+                width: 70%;
+            }
+        }
+        .txt-preview{
+            word-break: break-all;
+            bottom: 0;
+            left: 13px;
+            position: absolute;
+            right: 14px;
+            top: 40px;
+            overflow-y: auto;
+        }
         .office-preview{
+            border: 1px solid #e5e5e5;
             bottom: 0;
             left: 13px;
             position: absolute;
